test/scc/pp/errors/049.a
049.t:2:2: error: unterminated #elif